--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
@@ -14,7 +14,12 @@
     --background-start-rgb: 13, 36, 56;
     --background-end-rgb: 13, 36, 56;
   }
-}
+} */
+
+/* Dark bg */
+/* #0e2439 */
+/* Light bg */
+/* #ffffff */
 
 body {
   color: rgb(var(--foreground-rgb));
